[Autofill] Turn off DOM Autocomplete suggestions by default.

Bug: 867893, 853940, 869912

Change-Id: Ia9a2729682dd8cbbc662562ab4ce9f79bfc1fbd2
Reviewed-on: https://chromium-review.googlesource.com/1158720
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Commit-Queue: Mathieu Perreault <mathp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579897}
Former-commit-id: fa43848a4701d74a4ff4e742c6a4c7c6e61dab21